Logo on smaller screens fix, part 2

--- a/css/members.css
+++ b/css/members.css
@@ -99,8 +99,9 @@ ul {
   width: 33%;
   display: inline;
   vertical-align: middle;
-  max-width: 15ch;
-  padding-left: 2px;
+  padding-left: -2px;
+  text-align: center;
+  overflow: visible;
   height: auto; }
 
 .siteNavigation-link {
