--- a/src/stylesheets/modules/_siteNavigation.scss
+++ b/src/stylesheets/modules/_siteNavigation.scss
@@ -9,6 +9,7 @@
 	vertical-align: middle;
 	padding-left: -2px;
 	text-align: center;
+	overflow: visible;
 	height: auto;
 }
 
